--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-polyfill": "6.26.0",
+    "base64-image-loader": "1.2.1",
     "css-loader": "2.1.0",
     "eslint": "5.15.0",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-react": "7.12.4",
-    "file-loader": "3.0.1",
     "node-sass": "4.11.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
