--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "x-buttons-lib",
   "version": "1.0.0",
-  "main": "public/js/x-buttons.js",
+  "main": "public/js/x-buttons-lib.js",
   "description": "",
   "private": true,
   "repository": {
@@ -33,7 +33,6 @@
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
-    "babel-polyfill": "6.26.0",
     "base64-image-loader": "1.2.1",
     "css-loader": "2.1.0",
     "eslint": "5.15.0",
