--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "x-buttons-lib",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "public/js/x-buttons-lib.js",
   "description": "",
   "private": true,
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/alejovp/x-buttons-lib#readme",
   "scripts": {
-    "pre-build": "rm -rf public/js/ && rm -rf public/images/",
+    "pre-build": "rm -rf public/js/",
     "build": "npm run pre-build && webpack -p --env.production",
     "dev": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1",
